--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -26,6 +26,6 @@ repos:
         ]
         args: [
           '--docstring-convention', 'google',
-          '--ignore', 'E501,E203,W503',
+          '--ignore', 'D100,D103,E501,E203,W503',
         ]
         exclude: ^tests/.*
