--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
-ttkthemes==3.2.2
 aubio==0.4.9
 numpy==1.26.4
-scipy==1.15.3
+music21==9.5.0
 matplotlib==3.10.3
 pyaudio==0.2.14
+pygame==2.6.1
+scipy==1.15.3
+ttkthemes==3.2.2
